--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -37,3 +37,40 @@ img {
 .button {
   text-decoration: none;
 }
+.form-example {
+	grid-auto-rows: 1fr auto
+}
+.form-example--main-content {
+	align-self: flex-start
+}
+
+#keyfield{
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 13px;
+  line-height: 1.4;
+  /* letter-spacing: 0.05em; */
+  word-break: break-all;
+  white-space: pre-wrap;
+}
+
+#headings{
+  font-weight: bold;
+}
+
+#buttonclass{
+  text-align: right;
+}
+
+.loadingIcon{
+  animation: animate 2s infinite;
+}
+
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(720deg);
+  }
+}
