--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -37,6 +37,10 @@ img {
 .button {
   text-decoration: none;
 }
+
+#example-1{
+  height:200px;
+}
 .form-example {
 	grid-auto-rows: 1fr auto
 }
@@ -58,13 +62,28 @@ img {
 }
 
 #buttonclass{
-  text-align: start;
+text-align: start;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 15px;
+  margin-right:5px;
+  float: right;
+}
+
+#cancelButton{
+  background-color: red;
+  color:white
+}
+
+#textarea-example{
+  height:100px;
 }
 
 .loadingIcon{
   animation: animate 2s infinite;
+}
+
+#settingsModalButtons{
+  float: right;
 }
 
 
